# Disaster_Relief

./: CMakeLists.txt  README.md
cpp/: main.cpp
cpp/core/: DataLoader.cpp  DataLoader.h  Graph.cpp  Graph.h  Router.cpp  Router.h  Scheduler.cpp  Scheduler.h
cpp/ds/: FibonacciHeap.cpp  FibonacciHeap.h  MinHeap.cpp  MinHeap.h  QuadTree.cpp  QuadTree.h  SegmentTree.cpp  SegmentTree.h  SkipList.cpp  SkipList.h  Trie.cpp  Trie.h  UnionFind.cpp  UnionFind.h
cpp/output/: StateExporter.cpp  StateExporter.h
data/: india_depots.json  india_roads.json  india_zones.json
frontend/: index.html
frontend/css/: style.css
frontend/data/: state.json
frontend/js/: heapViz.js  map.js  skipListViz.js  trieViz.js  unionFindViz.js
